--- a/nibbler/CMakeLists.txt
+++ b/nibbler/CMakeLists.txt
@@ -1,3 +1,8 @@
-add_subdirectory(3rd-party)
-add_subdirectory(lib)
-add_subdirectory(src)
+if (CMAKE_BUILD_TYPE MATCHES "CI-TMP")
+    add_subdirectory(3rd-party)
+    add_subdirectory(src)
+else ()
+    add_subdirectory(3rd-party)
+    add_subdirectory(lib)
+    add_subdirectory(src)
+endif ()
