--- a/nibbler/src/CMakeLists.txt
+++ b/nibbler/src/CMakeLists.txt
@@ -13,6 +13,6 @@ add_executable(${PROJECT_NAME} main/main.cpp
         game/plugin/Plugin.cpp
 )
 
-target_link_libraries(${PROJECT_NAME} PRIVATE spdlog opengl-plugin)
+target_link_libraries(${PROJECT_NAME} PRIVATE spdlog)
 target_include_directories(${PROJECT_NAME} PUBLIC ../include)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
