--- a/nibbler/lib/opengl-plugin/CMakeLists.txt
+++ b/nibbler/lib/opengl-plugin/CMakeLists.txt
@@ -4,6 +4,8 @@ add_library(${PROJECT_NAME} SHARED
         PluginOpenGL.cpp
 )
 
+target_compile_definitions(${PROJECT_NAME} PUBLIC SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE)
+
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(${PROJECT_NAME} PRIVATE ../../include)
 
